rk3399: add TN3399_V3 target

--- a/board/batocera/rockchip/rk3399/linux-defconfig.config
+++ b/board/batocera/rockchip/rk3399/linux-defconfig.config
@@ -4687,6 +4687,7 @@ CONFIG_DRM_PANEL_VISIONOX_RM69299=y
 # CONFIG_DRM_PANEL_VISIONOX_R66451 is not set
 CONFIG_DRM_PANEL_WIDECHIPS_WS2401=y
 CONFIG_DRM_PANEL_XINPENG_XPP055C272=y
+CONFIG_DRM_PANEL_TOSHIBA_TC358775=y
 # end of Display Panels
 
 CONFIG_DRM_BRIDGE=y
@@ -5156,7 +5157,7 @@ CONFIG_SND_SOC_RT5514=y
 CONFIG_SND_SOC_RT5514_SPI=y
 # CONFIG_SND_SOC_RT5616 is not set
 # CONFIG_SND_SOC_RT5631 is not set
-# CONFIG_SND_SOC_RT5640 is not set
+CONFIG_SND_SOC_RT5640=y
 CONFIG_SND_SOC_RT5645=y
 CONFIG_SND_SOC_RT5651=y
 # CONFIG_SND_SOC_RT5659 is not set
