--- a/board/batocera/rockchip/rk3399/linux-defconfig.config
+++ b/board/batocera/rockchip/rk3399/linux-defconfig.config
@@ -6313,7 +6313,7 @@ CONFIG_EXTCON=y
 # CONFIG_EXTCON_SM5502 is not set
 # CONFIG_EXTCON_USB_GPIO is not set
 # CONFIG_EXTCON_USBC_TUSB320 is not set
-# CONFIG_EXTCON_USBC_VIRTUAL_PD is not set
+CONFIG_EXTCON_USBC_VIRTUAL_PD=y
 CONFIG_MEMORY=y
 # CONFIG_ARM_PL172_MPMC is not set
 CONFIG_IIO=y
