rk3399: update TIANNUO TN3399_V3 dts and license info

--- a/board/batocera/rockchip/rk3399/dts/rk3399-tn3399-v3-with-lvds-panel.dtsi
+++ b/board/batocera/rockchip/rk3399/dts/rk3399-tn3399-v3-with-lvds-panel.dtsi
@@ -1,3 +1,9 @@
+// SPDX-License-Identifier: (GPL-2.0+ OR MIT)
+/*
+ * Copyright (c) 2017 Fuzhou Rockchip Electronics Co., Ltd.
+ * Copyright (c) 2022 retro98boy <retro98boy@qq.com>
+ */
+
 /dts-v1/;
 
 #include "rk3399-tn3399-v3.dts"
